--- a/views/user/info.ejs
+++ b/views/user/info.ejs
@@ -50,7 +50,7 @@
                                 <label for="user_id">使用者編號:</label>
                             </div>
                             <div class="col">
-                                <input type="text" id="user_id" name="user_id" class="form-control" value="<%= data.user_id %>" placeholder="使用者編號">
+                                <input type="text" id="user_id" name="user_id" class="form-control text-center" value="<%= data.user_id %>" placeholder="使用者編號">
                             </div>
                         </div>
 
@@ -59,7 +59,7 @@
                                 <label for="username">帳戶名稱:</label>
                             </div>
                             <div class="col">
-                                <input type="text" id="username" name="username" class="form-control" value="<%= data.username %>" placeholder="帳戶名稱" required>
+                                <input type="text" id="username" name="username" class="form-control text-center" value="<%= data.username %>" placeholder="帳戶名稱" required>
                             </div>
                         </div>
 
@@ -68,7 +68,7 @@
                                 <label for="password">密碼:</label>
                             </div>
                             <div class="col">
-                                <input type="password" id="password" name="password" class="form-control" placeholder="密碼" maxlength="16">
+                                <input type="password" id="password" name="password" class="form-control text-center" placeholder="密碼" maxlength="16">
                             </div>
                         </div>
 
@@ -77,7 +77,7 @@
                                 <label for="confirm_password">確認密碼:</label>
                             </div>
                             <div class="col">
-                                <input type="password" id="confirm_password" name="confirm_password" class="form-control" placeholder="確認密碼" maxlength="16">
+                                <input type="password" id="confirm_password" name="confirm_password" class="form-control text-center" placeholder="確認密碼" maxlength="16">
                             </div>
                         </div>
 
@@ -86,7 +86,7 @@
                                 <label for="name">姓名:</label>
                             </div>
                             <div class="col">
-                                <input type="text" id="name" name="name" class="form-control" value="<%= data.name %>" placeholder="姓名" required>
+                                <input type="text" id="name" name="name" class="form-control text-center" value="<%= data.name %>" placeholder="姓名" required>
                             </div>
                         </div>
 
