--- a/views/stock/index.ejs
+++ b/views/stock/index.ejs
@@ -37,8 +37,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <label class="fs-4">搜尋資料:</label>
-                        <form action="/stock" method="get" class="border m-1">
+                        <label class="fs-4" onclick="hiddenById('search')">搜尋資料:</label>
+                        <form action="/stock" method="get" class="border m-1" id="search" hidden>
                             <div class="row my-1">
                                 <div class="col-2">
                                     <label for="area">儲存區域:</label>
