update search button display

--- a/views/deliveryOrder/index.ejs
+++ b/views/deliveryOrder/index.ejs
@@ -37,9 +37,9 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row border">
                         <label class="fs-4" onclick="hiddenById('search')">搜尋資料:</label>
-                        <form action="/deliveryOrder" method="get" class="border m-1" id="search" hidden>
+                        <form action="/deliveryOrder" method="get" class="m-1" id="search" hidden>
                             <% for(let data of search){ %>
                                 <div class="row m-1">
                                     <div class="col-2">
