--- a/views/stock/index.ejs
+++ b/views/stock/index.ejs
@@ -36,9 +36,9 @@
                             <a href="/stock/create" class="btn btn-primary">建立儲存位置</a>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row border">
                         <label class="fs-4" onclick="hiddenById('search')">搜尋資料:</label>
-                        <form action="/stock" method="get" class="border m-1" id="search" hidden>
+                        <form action="/stock" method="get" class="m-1" id="search" hidden>
                             <div class="row my-1">
                                 <div class="col-2">
                                     <label for="area">儲存區域:</label>
