--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -36,10 +36,10 @@
                             <a href="/user/create" class="btn btn-primary">創建用戶</a>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row border">
                         <label class="fs-4" onclick="hiddenById('search')">搜尋資料:</label>
                         
-                        <form action="/user" method="get" class="border m-1" id="search" hidden>
+                        <form action="/user" method="get" class="m-1" id="search" hidden>
                             <div class="row my-1">
                                 <div class="col-2">
                                     <label for="user_id">使用者編號: </label>
