--- a/views/product/index.ejs
+++ b/views/product/index.ejs
@@ -68,7 +68,7 @@
                     </div>
                     <div class="row py-1 my-1 border-bottom border-primary">
                         <div class="col">
-                            <label for="Brand">生產公司:</label><select id="selectBoxP" name="Brand" class="form-select">
+                            <label for="Brand">生產公司:</label><select id="selectBoxP" name="Brand" class="form-select text-center">
                                 <option value=''>-----請選擇-----</option>
                                 <% for(let item of brands){ %>
                                     <option value="<%= item %>"><%= item %>
@@ -79,13 +79,13 @@
                         </div>
                         <div class="col">
                             <label for="Type">貨品類型:</label>
-                            <select id="influenceBoxP" name="Type" class="form-select">
+                            <select id="influenceBoxP" name="Type" class="form-select text-center">
                                 <option value=''>-----請選擇-----</option>
                             </select><br>
                             貨品類型：<input type='text' class="form-control text-center" name="new_Type" id="Brand" value="">
                         </div>
                         <div class="col">
-                            <label for="Origin">產地:</label><select name='Origin' class="form-select">
+                            <label for="Origin">產地:</label><select name='Origin' class="form-select text-center">
                                 <option value="">-----請選擇-----</option>
                                 <% for(let item of origins){ %>
                                     <option value="<%= item %>">
@@ -97,7 +97,7 @@
                                 size="50">
                         </div>
                         <div class="col">
-                            <label for="stock">儲存位置:</label><select name='stock_id' class="form-select">
+                            <label for="stock">儲存位置:</label><select name='stock_id' class="form-select text-center">
                                 <% for(let item of stocks){ %>
                                     <option value="<%= item._id %>">
                                         <%= item.name %>
