--- a/views/product/index.ejs
+++ b/views/product/index.ejs
@@ -71,7 +71,7 @@
                 </div>
                 <div class="row py-1 my-1 border-bottom border-dark">
                     <div class="col">
-                        <label for="Brand">Brand:</label><select id="selectBoxP" name="Brand">
+                        <label for="Brand">:</label><select id="selectBoxP" name="Brand">
                             <option value=''>-----請選擇-----</option>
                             <% for(let item of brands){ %>
                                 <option value="<%= item %>"><%= item %>
