--- a/views/recycleBin/index.ejs
+++ b/views/recycleBin/index.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head><script></script>
     <title>Warehouse In Out system</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="/css/style.css" rel="stylesheet" type="text/css">
@@ -32,7 +32,7 @@
                     <li class="breadcrumb-item"><a href="/"  class="darkmode">首頁</a></li>
                     <li class="breadcrumb-item active darkmode" aria-current="page">回收箱</li>
                 </ol>
-                <button type="submit" form="rollback" class="btn btn-warning">復原</button>    
+                <button type="submit" form="rollback" class="btn btn-warning" <% if(datas.length==0){ %>disabled<% } %>>復原</button>    
             </div>
           </div>
           <form action="/recycleBin/rollback" method="post" id="rollback">
