--- a/views/deliveryOrder/create.ejs
+++ b/views/deliveryOrder/create.ejs
@@ -33,7 +33,7 @@
                     <a href="/" class="list-group-item darkmode">首頁</a>
                     <a href="/productlist" class="list-group-item darkmode">貨品</a>
                     <a href="/stock" class="list-group-item darkmode">儲存位置</a>
-                    <a href="/deliveryOrder" class="list-group-item darkmode">交貨單</a>
+                    <a href="/deliveryOrder" class="list-group-item darkmode">貨單</a>
                     <a href="/user" class="list-group-item darkmode">用戶</a>
                     <a href="/recycleBin" class="list-group-item darkmode">回收箱</a>
                     <label class="list-group-item darkmode darkmode-btn" onclick="darkMode(this)">夜間模式</label>
@@ -47,15 +47,9 @@
             <div class="col-10">
                 <div class="row">
                     <div class="col">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/" class="darkmode">首頁</a></li>
-                            <li class="breadcrumb-item"><a href="/deliveryOrder" class="darkmode">交貨單</a></li>
-                            <li class="breadcrumb-item darkmode">貨單資料</li>
-                            <li class="breadcrumb-item active darkmode" aria-current="page">
-                                <p style='display:inline' class='target'></p>
-                                <p style='display:inline' class='displayID'></p>
-                            </li>
-                        </ol>
+                        <label><a href="/" class="darkmode">首頁</a></label> / 
+                        <label class="darkmode"><a href="/deliveryOrder" class="darkmode">貨單</a></label> / 
+                        <label class="darkmode">貨單資料</label>
                     </div>
                     <div class="col">
                         <!--<button class="btn btn-warning" form="delete">刪除貨單</button>-->
