--- a/views/product/info.ejs
+++ b/views/product/info.ejs
@@ -16,7 +16,7 @@
               <a href="/" class="list-group-item darkmode">首頁</a>
               <a href="/productlist" class="list-group-item darkmode">貨品</a>
               <a href="/stock" class="list-group-item darkmode">儲存位置</a>
-              <a href="/deliveryOrder" class="list-group-item darkmode">交貨單</a>
+              <a href="/deliveryOrder" class="list-group-item darkmode">貨單</a>
               <a href="/user" class="list-group-item darkmode">用戶</a>
               <a href="/recycleBin" class="list-group-item darkmode">回收箱</a>
               <label class="list-group-item darkmode darkmode-btn" onclick="darkMode(this)">夜間模式</label>
@@ -29,13 +29,11 @@
 
         <div class="col-10">
           <div class="row my-1">
-            <div class="col">
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/" class="darkmode">首頁</a></li>
-                <li class="breadcrumb-item" aria-current="page"><a href="/productlist" class="darkmode">貨品</a></li>
-                <li class="breadcrumb-item darkmode" aria-current="page">貨品資料</li>
-                <li class="breadcrumb-item active darkmode" aria-current="page"><%= data.Product_id %></li>
-              </ol>
+            <div class="col">              
+              <label><a href="/" class="darkmode">首頁</a></label> / 
+              <label><a href="/productlist" class="darkmode">貨品</a></label> / 
+              <label class="darkmode">貨品資料</label> / 
+              <label class="darkmode"><%= data.Product_id %></label>              
             </div>
           </div>
             
