--- a/views/recycleBin/index.ejs
+++ b/views/recycleBin/index.ejs
@@ -14,7 +14,7 @@
               <a href="/" class="list-group-item darkmode">首頁</a>
               <a href="/productlist" class="list-group-item darkmode">貨品</a>
               <a href="/stock" class="list-group-item darkmode">儲存位置</a>
-              <a href="/deliveryOrder" class="list-group-item darkmode">交貨單</a>
+              <a href="/deliveryOrder" class="list-group-item darkmode">貨單</a>
               <a href="/user" class="list-group-item darkmode">用戶</a>
               <a href="/recycleBin" class="list-group-item darkmode">回收箱</a>
               <label class="list-group-item darkmode darkmode-btn" onclick="darkMode(this)">夜間模式</label>
@@ -27,11 +27,9 @@
 
         <div class="col-10">
           <div class="row my-1">
-            <div class="col">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/"  class="darkmode">首頁</a></li>
-                    <li class="breadcrumb-item active darkmode" aria-current="page">回收箱</li>
-                </ol>
+            <div class="col">                
+                <label><a href="/"  class="darkmode">首頁</a></label> /
+                <label class="darkmode">回收箱</label><br>                
                 <button type="submit" form="rollback" class="btn btn-warning" <% if(datas.length==0){ %>disabled<% } %>>復原</button>    
             </div>
           </div>
