--- a/views/stock/enquiry.ejs
+++ b/views/stock/enquiry.ejs
@@ -16,7 +16,7 @@
                         <a href="/" class="list-group-item darkmode">首頁</a>
                         <a href="/productlist" class="list-group-item darkmode">貨品</a>
                         <a href="/stock" class="list-group-item darkmode">儲存位置</a>
-                        <a href="/deliveryOrder" class="list-group-item darkmode">交貨單</a>
+                        <a href="/deliveryOrder" class="list-group-item darkmode">貨單</a>
                         <a href="/user" class="list-group-item darkmode">用戶</a>
                         <a href="/recycleBin" class="list-group-item darkmode">回收箱</a>
                         <label class="list-group-item darkmode darkmode-btn" onclick="darkMode(this)">夜間模式</label>
@@ -29,12 +29,10 @@
         
                 <div class="col-10">
                     <div class="row my-1">
-                        <div class="col">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item darkmode"><a href="/" class="darkmode">首頁</a></li>
-                                <li class="breadcrumb-item darkmode"><a href="/stock" class="darkmode">儲存位置</a></li>
-                                <li class="breadcrumb-item active darkmode" aria-current="page"><%= stock_data._id? (stock_data.area + " " + stock_data.name) : '建立儲存位置' %></li>
-                            </ol>
+                        <div class="col">                            
+                            <label><a href="/" class="darkmode">首頁</a></label> / 
+                            <label><a href="/stock" class="darkmode">儲存位置</a></label> / 
+                            <label class="darkmode" aria-current="page"><%= stock_data._id? (stock_data.area + " " + stock_data.name) : '建立儲存位置' %></label>                            
                         </div>
                     </div>
                     <label class="h1"><%= stock_data._id ? "修改儲存位置" : "建立儲存位置" %></label>
