--- a/views/stock/index.ejs
+++ b/views/stock/index.ejs
@@ -13,7 +13,7 @@
                         <a href="/" class="list-group-item darkmode">首頁</a>
                         <a href="/productlist" class="list-group-item darkmode">貨品</a>
                         <a href="/stock" class="list-group-item darkmode">儲存位置</a>
-                        <a href="/deliveryOrder" class="list-group-item darkmode">交貨單</a>
+                        <a href="/deliveryOrder" class="list-group-item darkmode">貨單</a>
                         <a href="/user" class="list-group-item darkmode">用戶</a>
                         <a href="/recycleBin" class="list-group-item darkmode">回收箱</a>
                         <label class="list-group-item darkmode darkmode-btn" onclick="darkMode(this)">夜間模式</label>
@@ -27,10 +27,8 @@
                 <div class="col-10">
                     <div class="row my-1">
                         <div class="col">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="/" class="darkmode">首頁</a></li>
-                                <li class="breadcrumb-item active darkmode" aria-current="page">儲存位置</li>
-                            </ol>
+                            <label><a href="/" class="darkmode">首頁</a></label> / 
+                            <label class="darkmode">儲存位置</a></label>
                         </div>
                         <div class="col">
                             <a href="/stock/create" class="btn btn-primary">建立儲存位置</a>
