--- a/views/user/info.ejs
+++ b/views/user/info.ejs
@@ -17,7 +17,7 @@
                         <a href="/" class="list-group-item darkmode">首頁</a>
                         <a href="/productlist" class="list-group-item darkmode">貨品</a>
                         <a href="/stock" class="list-group-item darkmode">儲存位置</a>
-                        <a href="/deliveryOrder" class="list-group-item darkmode">交貨單</a>
+                        <a href="/deliveryOrder" class="list-group-item darkmode">貨單</a>
                         <a href="/user" class="list-group-item darkmode">用戶</a>
                         <a href="/recycleBin" class="list-group-item darkmode">回收箱</a>
                         <label class="list-group-item darkmode darkmode-btn" onclick="darkMode(this)">夜間模式</label>
@@ -30,12 +30,10 @@
                 
                 <div class="col-10">
                     <div class="row my-1">
-                        <div class="col">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="/" class="darkmode">首頁</a></li>
-                                <li class="breadcrumb-item"><a href="/user" class="darkmode">使用者/管理員</a></li>
-                                <li class="breadcrumb-item active darkmode" aria-current="page"><%= data._id? data.user_id : '創建用戶' %></li>
-                            </ol>
+                        <div class="col">                        
+                            <label><a href="/" class="darkmode">首頁</a></label> / 
+                            <label><a href="/user" class="darkmode">使用者/管理員</a></label> / 
+                            <label class="darkmode"><%= data._id? data.user_id : '創建用戶' %></label>                            
                         </div>
                     </div>
 
